Sidebars: correct z-index bug

--- a/www/style.mac.css
+++ b/www/style.mac.css
@@ -4217,6 +4217,7 @@ head.content-width-normal + body #secondary-content-column {
 	bottom: 0;
 	margin: 0;
 	opacity: 0.97;
+	z-index: 1;
 }
 head.content-width-normal + body #secondary-content-column.collapsed {
 	transform: translateX(100%);
